WIP.. flattening the storage model